force-app/main/default/objects/Payment_Summary__c/Payment_Summary__c.object-meta.xml
<CustomObject>
    <label>Payment Summary</label>
    <nameField>
        <label>Payment Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>