force-app/main/default/objects/Payment_Summary__c/fields/Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_Time__c</fullName>
    <label>Approved Date&amp;Time</label>
    <type>DateTime</type>
</CustomField>