force-app/main/default/objects/Payment_Summary__c/fields/Casevault_PID__c.field-meta.xml
<CustomField>
    <fullName>Casevault_PID__c</fullName>
    <formula>Person__r.Casevault_PID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casevault PID</label>
    <type>Text</type>
</CustomField>