force-app/main/default/objects/Payment_Summary__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <formula>Person__r.FirstName+&apos; &apos;+Person__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child</label>
    <type>Text</type>
</CustomField>