force-app/main/default/objects/Payment_Summary__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <formula>Person__r.FirstName+&apos; &apos;+Person__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Id</label>
    <type>Text</type>
</CustomField>