force-app/main/default/objects/Payment_Summary__c/fields/Days_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Service__c</fullName>
    <formula>IF(ISBLANK(End_Date__c),0, (End_Date__c -  Start_Date__c))+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days of Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>