force-app/main/default/objects/Payment_Summary__c/fields/End_Date1__c.field-meta.xml
<CustomField>
    <fullName>End_Date1__c</fullName>
    <formula>End_Date__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>