force-app/main/default/objects/Payment_Summary__c/fields/Generated_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Generated_DateTime__c</fullName>
    <label>Generated DateTime</label>
    <type>DateTime</type>
</CustomField>