force-app/main/default/objects/Payment_Summary__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <formula>IF( ISBLANK(Days_of_Service__c),0.00,(Days_of_Service__c *  Per_Diem_Rate__c))</formula>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>