force-app/main/default/objects/Payment_Summary__c/fields/Payment_Generated__c.field-meta.xml
<CustomField>
    <fullName>Payment_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Generated</label>
    <type>Checkbox</type>
</CustomField>