force-app/main/default/objects/Payment_Summary__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Summary</relationshipLabel>
    <relationshipName>Payment_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>