force-app/main/default/objects/Payment_Summary__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Payment Summary</relationshipLabel>
    <relationshipName>Payment_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>