force-app/main/default/objects/Payment_Summary__c/fields/Supervisor_Approval__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>