force-app/main/default/objects/Payment_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Child__c</columns>
    <columns>Client_Id__c</columns>
    <columns>Provider__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>